# kitty-launcher

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  PROJECT_SUMMARY.md  README.md  _config.yml  kitty-launcher.1  kitty-launcher.desktop  kitty-launcher.info
.github/workflows/: build-and-test.yml  release.yml
debian/: changelog  control  copyright  rules
docs/: INSTALL.md  LEARNING_GUIDE.md  MANIFEST.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  _config.yml  index.md  kitty-launcher.1
scripts/: README.md  build-deb.sh  build.sh  install-completions.sh
src/: main.rs
