[package]
name = "kitty-launcher"
version = "0.5.1"
edition = "2021"
authors = ["OpenCode Contributors"]
description = "A robust Rust wrapper for kitty terminal emulator with flexible session presets"
license = "MIT"
documentation = "https://github.com/pilakkat1964/kitty-launcher"
repository = "https://github.com/pilakkat1964/kitty-launcher"
readme = "README.md"

[dependencies]
